hash and fixes
